--- a/_config.yml
+++ b/_config.yml
@@ -43,3 +43,10 @@ search:
 # Plugins
 plugins:
   - jekyll-seo-tag
+
+# Edit on GitHub
+gh_edit_link: true
+gh_edit_link_text: "Edit this page on GitHub"
+gh_edit_repository: "https://github.com/yourusername/piconav-docs"
+gh_edit_branch: "main"
+gh_edit_view_mode: "edit"
