--- a/_config.yml
+++ b/_config.yml
@@ -1,36 +1,30 @@
-title: PicoNav Documentation
-description: User manuals, guides, and downloads for PicoNav
-baseurl: "" # Leave empty for custom domain
+title: PicoNav
+description: Your virtual pet companion - User guides, downloads, and support
+baseurl: "" 
 url: "https://piconav.com"
 
 # Theme
 remote_theme: just-the-docs/just-the-docs
 
-# Color scheme
-color_scheme: dark # or "light"
+# Color scheme (can be: light, dark, or custom)
+color_scheme: dark
 
 # Logo
 logo: "/assets/images/piconav-logo.png"
 
 # Footer
-footer_content: 'Copyright &copy; 2025 Veak Designs. Open source project.'
+footer_content: 'Copyright &copy; 2025 <a href="https://veak.design">Veak Designs</a>. Open source project on <a href="https://github.com/VincentVeak/PicoNav">GitHub</a>.'
 
 # Back to top link
 back_to_top: true
 back_to_top_text: "Back to top"
 
-# External links
+# Navigation - Shop button in header
 aux_links:
   "Shop PicoNav":
     - "https://veak.design/collections/piconav"
-  "View on GitHub":
-    - "https://github.com/yourusername/piconav-docs"
 
-# Navigation structure
-nav_external_links:
-  - title: Buy PicoNav
-    url: https://veak.design/collections/piconav
-    hide_icon: false
+aux_links_new_tab: true
 
 # Enable search
 search_enabled: true
@@ -39,14 +33,32 @@ search:
   previews: 3
   preview_words_before: 5
   preview_words_after: 10
+  tokenizer_separator: /[\s/]+/
+  rel_url: true
+  button: false
+
+# Heading anchor links
+heading_anchors: true
+
+# External navigation links
+nav_external_links:
+  - title: Buy PicoNav
+    url: https://veak.design/collections/piconav
+    hide_icon: false
+
+# Enable "Edit this page" on GitHub
+gh_edit_link: true
+gh_edit_link_text: "Edit this page on GitHub"
+gh_edit_repository: "https://github.com/VincentVeak/PicoNav"
+gh_edit_branch: "main"
+gh_edit_view_mode: "edit"
 
 # Plugins
 plugins:
   - jekyll-seo-tag
 
-# Edit on GitHub
-gh_edit_link: true
-gh_edit_link_text: "Edit this page on GitHub"
-gh_edit_repository: "https://github.com/yourusername/piconav-docs"
-gh_edit_branch: "main"
-gh_edit_view_mode: "edit"
+# Exclude from processing
+exclude:
+  - README.md
+  - Gemfile
+  - Gemfile.lock
